Add more cerebras models

--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -15,6 +15,9 @@ jobs:
       matrix:
         include:
           - model: "ggml-gpt4all-j"
+          - model: "ggml-cerebras-2.7b-alpaca"
+          - model: "ggml-cerebras-2.7b-q4"
+          - model: "ggml-cerebras-testmodel"
     runs-on: ubuntu-latest
     steps:
       - name: Release space from worker
